--- a/_posts/2016-03-27-git-repo-skills.html
+++ b/_posts/2016-03-27-git-repo-skills.html
@@ -8,9 +8,9 @@ title: git, repo advance skills review
 <h3>git</h3>
 <p>
 	<ul>
-		<li>git checkout -b branchname startpoint make a branch named "branchname" based on the startpoint commit;以startpoint提交点为基点创建一个名为branchname的branch </li>
-		<li>git rev-parse HEAD(git symboli-ref HEAD) show the commit hash revision value(the commit symbolic value) of HEAD pointer；</li>
-		<li>git rebase --onto master server client</li>
+		<li>git checkout -b branchname startpoint : make a branch named "branchname" based on the startpoint commit;以startpoint提交点为基点创建一个名为branchname的branch </li>
+		<li>git rev-parse HEAD(git symboli-ref HEAD) : show the commit hash revision value(the commit symbolic value) of HEAD pointer；</li>
+		<li>git rebase --onto master server client : </li>
 	</ul>
 <p/>
 
