--- a/_posts/2016-03-27-git-repo-skills.html
+++ b/_posts/2016-03-27-git-repo-skills.html
@@ -62,7 +62,7 @@ title: git, repo advance skills
 			怎样基于已经下载的git仓库切换Android版本
 		</li>
 		<p>
-			repo forall -c git fetch aosp --tags; <br>
+			repo forall -c git fetch aosp --tags <br>
 			repo forall -c git checkout -b john5.1.1_r14_api22 android-5.1.1_r1
 		</p>
 	</ul>
